--- a/packages/react-base16-styling/package.json
+++ b/packages/react-base16-styling/package.json
@@ -63,6 +63,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.1.5",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.2",
     "typescript": "~4.6.4"
