--- a/packages/react-dock/package.json
+++ b/packages/react-dock/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-react": "~7.28.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "react": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
