--- a/packages/redux-devtools-ui/package.json
+++ b/packages/redux-devtools-ui/package.json
@@ -86,6 +86,7 @@
     "eslint-plugin-react": "~7.28.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "ncp": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
